--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>bobby</groupId>
-    <artifactId>demo</artifactId>
-    <version>service</version>
+    <artifactId>service</artifactId>
+    <version>1.0</version>
     <!--默认为Jar包-->
     <!--<packaging>jar</packaging>-->
     <packaging>war</packaging>
